OpenEXR error when saving OpenGL render #53874

Closed
opened 2018-01-23 19:41:00 +01:00 by Dalai Felinto · 18 comments

Blender Version
Broken: 4a3ddd8a7a5bc185(HEAD)
Worked: 2.79

Short description of error
I can't save OpenEXR images that were rendered from OpenGL.

Exact steps for others to reproduce the error

  • OpenGL render
  • Set "OpenEXR" as the format

In the console you will get the error: "Error: attempt to save MultiLayer without layers."
And the image itself is totally broken.

Note: it works in 2.79 and 2.79aRC1. It works for regular render. It doesn't work for either simple OpenEXR or multi-layer OpenEXR.

**Blender Version** Broken: 4a3ddd8a7a5bc185(HEAD) Worked: 2.79 **Short description of error** I can't save OpenEXR images that were rendered from OpenGL. **Exact steps for others to reproduce the error** * OpenGL render * Set "OpenEXR" as the format In the console you will get the error: "Error: attempt to save MultiLayer without layers." And the image itself is totally broken. *Note: it works in 2.79 and 2.79aRC1. It works for regular render. It doesn't work for either simple OpenEXR or multi-layer OpenEXR.*
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Added subscriber: @AdrianoOliveira

Added subscriber: @AdrianoOliveira
Brecht Van Lommel was assigned by Dalai Felinto 2018-01-23 19:42:05 +01:00

2.79 has the same issue when saving OpenEXR MultiLayer. With the unified code it now fails for OpenEXR as well.

2.79 has the same issue when saving OpenEXR MultiLayer. With the unified code it now fails for OpenEXR as well.

This issue was referenced by 3e20ac8df3

This issue was referenced by 3e20ac8df3b147624028ba1c32f66a81dd1b9b1c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Owner

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Owner

I still have this issue. I forgot to mention one (implicit since it's OpenGL render) step, which is that I'm saving from the Image Editor, the "Render Result". How were you testing it?

I still have this issue. I forgot to mention one (implicit since it's OpenGL render) step, which is that I'm saving from the Image Editor, the "Render Result". How were you testing it?

This issue was referenced by 9560c57e0b

This issue was referenced by 9560c57e0bed99a497f0390db6edd4ca7d852c56

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

I tested OpenGL animation render before, both should work now.

I tested OpenGL animation render before, both should work now.
Author
Owner

Thank you. It's working now in master. In 2.8 I still get this problem :/. But aside from a merge error it must be something 2.8 specific.

Thank you. It's working now in master. In 2.8 I still get this problem :/. But aside from a merge error it must be something 2.8 specific.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

The issue is caused by rv->rect32 being NULL in 2.8 and set in master.

Seems there is the assumption that a float buffer will always have layers.

The issue is caused by `rv->rect32` being NULL in 2.8 and set in master. Seems there is the assumption that a float buffer will always have layers.
Author
Owner

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Owner

Re-opening again (sorry Brecht). Let me know if you prefer that this is reported as a new (2.8 specific) bug.

Re-opening again (sorry Brecht). Let me know if you prefer that this is reported as a new (2.8 specific) bug.

This issue was referenced by 176c0c96c2

This issue was referenced by 176c0c96c2dd9be39ad482c45535ed0e63a5ddad

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Owner

Perfect, thank you Brecht. It's all good now!

Perfect, thank you Brecht. It's all good now!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53874
No description provided.