Fix T53874: more cases of OpenGL render to OpenEXR not working after recent changes.